# yogurt_app

./: .env  .gitignore  Cargo.toml  README.md
examples/: quick_dev.rs
src/: app.rs  backend.rs  lib.rs  main.rs
src/backend/: config.rs  ctx.rs  error.rs  log.rs  middleware.rs  model.rs  routes.rs  web.rs
src/backend/_dev_utils/: dev_db.rs
src/backend/auth/: config.rs
src/backend/middleware/: mw_auth.rs  mw_response_mapper.rs
src/backend/model/: conv.rs  conv_msg.rs  task.rs
src/backend/model/store/: dbx.rs
src/backend/routes/: routes_login.rs  routes_static.rs  routes_tickets.rs
src/backend/rpc/: error.rs
src/backend/rpc/rpcs/: agent_rpc.rs
src/backend/utils/: envs.rs
src/backend/web/: routes.rs
src/backend/web/middleware/: mw_auth.rs
src/backend/web/routes/: routes_static.rs
yogurt-sim/: Cargo.toml
yogurt-sim/src/: ball.rs  collisions.rs  constants.rs  gutters.rs  main.rs  paddles.rs  primitive_components.rs  score_board.rs
yogurt-web/: Cargo.toml
yogurt-web/end2end/playwright-report/: index.html
yogurt-web/examples/: gen-key.rs  quick_dev.rs
yogurt-web/public/bevy/: index.html  yogurt-sim.js
yogurt-web/sql/dev_initial/: 02-dev-seed.sql
yogurt-web/src/: app.rs  main.rs
yogurt-web/src/backend/: _dev_utils.rs  auth.rs  error.rs  log.rs
yogurt-web/src/backend/_dev_utils/: dev_db.rs
yogurt-web/src/backend/auth/: pwd.rs  token.rs
yogurt-web/src/backend/auth/pwd/: error.rs  scheme.rs
yogurt-web/src/backend/auth/pwd/scheme/: scheme_01.rs  scheme_02.rs
yogurt-web/src/backend/model/: agent.rs  conv_user.rs  error.rs  store.rs  user.rs
yogurt-web/src/backend/model/base/: crud_fns.rs  utils.rs
yogurt-web/src/backend/rpc/rpcs/: conv_rpc.rs  prelude.rs
yogurt-web/src/backend/web/: config.rs  error.rs  middleware.rs
yogurt-web/src/backend/web/middleware/: mw_req_stamp.rs  mw_res_map.rs
yogurt-web/src/backend/web/routes/: routes_login.rs  routes_rpc.rs
